# ifcgeom

./: .gitignore  .pkg  CMakeLists.txt
cmake/: pkg.cmake
exe/: main.cc
include/ifcgeom/: ifcgeom.h
src/: ifcgeom.cc
test/: test.cc
